Fixed the navbar icons wrapping and now have the hamburger menu popping up earlier

--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -1654,7 +1654,7 @@ p {
   line-height: 1.4;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .lead {
     font-size: 21px;
   }
@@ -1852,7 +1852,7 @@ dd {
   margin-left: 0;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .dl-horizontal dt {
     float: left;
     width: 160px;
@@ -2009,9 +2009,9 @@ pre code {
   margin-left: auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .container {
-    width: 750px;
+    width: 100%;
   }
 }
 
@@ -2312,7 +2312,7 @@ pre code {
   margin-left: 0;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .col-sm-1,
   .col-sm-2,
   .col-sm-3,
@@ -3749,7 +3749,7 @@ select[multiple].input-lg {
   color: #737373;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .form-inline .form-group {
     display: inline-block;
     margin-bottom: 0;
@@ -3829,7 +3829,7 @@ select[multiple].input-lg {
   margin-left: -15px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .form-horizontal .control-label {
     padding-top: 7px;
     margin-bottom: 0;
@@ -3841,14 +3841,14 @@ select[multiple].input-lg {
   right: 15px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .form-horizontal .form-group-lg .control-label {
     padding-top: 11px;
     font-size: 18px;
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .form-horizontal .form-group-sm .control-label {
     padding-top: 6px;
     font-size: 12px;
@@ -4579,7 +4579,7 @@ tbody.collapse.in {
   margin-bottom: 2px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .navbar-right .dropdown-menu {
     right: 0;
     left: auto;
@@ -5090,7 +5090,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   left: auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .nav-tabs.nav-justified > li {
     display: table-cell;
     width: 1%;
@@ -5112,7 +5112,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border: 1px solid #ddd;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .nav-tabs.nav-justified > li > a {
     border-bottom: 1px solid #ddd;
     border-radius: 4px 4px 0 0;
@@ -5171,7 +5171,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   left: auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .nav-justified > li {
     display: table-cell;
     width: 1%;
@@ -5197,7 +5197,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border: 1px solid #ddd;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .nav-tabs-justified > li > a {
     border-bottom: 1px solid #ddd;
     border-radius: 4px 4px 0 0;
@@ -5231,13 +5231,13 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border: 1px solid transparent;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .navbar {
     border-radius: 4px;
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .navbar-header {
     float: left;
   }
@@ -5257,7 +5257,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   overflow-y: auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .navbar-collapse {
     width: auto;
     border-top: 0;
@@ -5304,7 +5304,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-left: -15px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .container > .navbar-header,
   .container-fluid > .navbar-header,
   .container > .navbar-collapse,
@@ -5319,7 +5319,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-width: 0 0 1px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .navbar-static-top {
     border-radius: 0;
   }
@@ -5333,7 +5333,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   z-index: 1030;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .navbar-fixed-top,
   .navbar-fixed-bottom {
     border-radius: 0;
@@ -5368,7 +5368,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   display: block;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .navbar > .container .navbar-brand,
   .navbar > .container-fluid .navbar-brand {
     margin-left: -15px;
@@ -5403,7 +5403,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-top: 4px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .navbar-toggle {
     display: none;
   }
@@ -5446,7 +5446,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .navbar-nav {
     float: left;
     margin: 0;
@@ -5476,7 +5476,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     0 1px 0 rgba(255, 255, 255, 0.1);
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .navbar-form .form-group {
     display: inline-block;
     margin-bottom: 0;
@@ -5547,7 +5547,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .navbar-form {
     width: auto;
     padding-top: 0;
@@ -5594,7 +5594,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-bottom: 15px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .navbar-text {
     float: left;
     margin-right: 15px;
@@ -5602,7 +5602,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .navbar-left {
     float: left !important;
   }
@@ -6215,7 +6215,7 @@ a.badge:focus {
   max-width: 100%;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 800px) {
   .jumbotron {
     padding-top: 48px;
     padding-bottom: 48px;
@@ -7627,7 +7627,7 @@ button.close {
   overflow: scroll;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
   .modal-dialog {
     width: 600px;
     margin: 30px auto;
@@ -8195,7 +8195,7 @@ button.close {
   text-shadow: none;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 800px) {
   .carousel-control .glyphicon-chevron-left,
   .carousel-control .glyphicon-chevron-right,
   .carousel-control .icon-prev,
@@ -8387,7 +8387,7 @@ button.close {
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 800px) and (max-width: 991px) {
   .visible-sm {
     display: block !important;
   }
@@ -8406,19 +8406,19 @@ button.close {
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 800px) and (max-width: 991px) {
   .visible-sm-block {
     display: block !important;
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 800px) and (max-width: 991px) {
   .visible-sm-inline {
     display: inline !important;
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 800px) and (max-width: 991px) {
   .visible-sm-inline-block {
     display: inline-block !important;
   }
@@ -8504,7 +8504,7 @@ button.close {
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 800px) and (max-width: 991px) {
   .hidden-sm {
     display: none !important;
   }
